corrected alignment error on index.html & used float=left on css

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-.nav-link {
-    color: gray;
-
-}
-
 .navbar-brand {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: x-large;
@@ -30,6 +25,7 @@ img {
     margin-right: 15px;
     width: 70%;
     height: auto;
+    float: left;
 
 }
 
@@ -40,8 +36,7 @@ img {
 }
 
 #sticky-footer {
-    border-top: 10px;
-    border-color: bg-secondary;   
+    border-top: 10px; 
 }
 
 
